fix: show divider when overflow
item이 많아서 스크롤이 생기면 divider가 없어지는 현상 fix

--- a/DOM/shopping-list/style.css
+++ b/DOM/shopping-list/style.css
@@ -22,8 +22,6 @@ body {
 .shopping-list {
   background-color: white;
   margin: auto;
-  display: flex;
-  flex-direction: column;
   list-style: none;
   padding-left: 0%;
   height: 400px;
